// Schéma Complet: Authentification Utilisateurs avec GDPR & Cookies
// https://dbdiagram.io/

Table users {
  id bigint [pk, increment]
  username varchar(255) [unique, not null]
  email varchar(255) [unique, not null]
  email_verified_at timestamp [null]
  password varchar(255) [not null]
  remember_token varchar(100) [null]
  
  // Informations personnelles
  first_name varchar(255) [null]
  last_name varchar(255) [null]
  phone varchar(255) [null]
  date_of_birth date [null]
  
  // Adresse
  address varchar(255) [null]
  city varchar(255) [null]
  postal_code varchar(255) [null]
  country varchar(255) [default: 'Belgium']
  
  // Préférences et gestion
  role enum('Admin','User') [default: 'User']
  is_active boolean [default: true]
  last_login_at timestamp [null]
  newsletter_subscription boolean [default: false]
  language varchar(2) [default: 'fr']
  timezone varchar(255) [default: 'Europe/Brussels']
  
  // Métadonnées
  registration_ip varchar(45) [null]
  last_ip varchar(45) [null]
  browser_info json [null]
  
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Table principale des utilisateurs avec informations complètes'
}

Table password_reset_tokens {
  email varchar(255) [pk]
  token varchar(255) [not null]
  created_at timestamp [null]
  
  Note: 'Tokens de réinitialisation de mot de passe'
}

Table cookies {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id, null]
  session_id varchar(255) [null]
  ip_address varchar(45) [not null]
  user_agent text [not null]
  
  // Types de cookies et préférences GDPR
  necessary boolean [default: true]
  analytics boolean [default: false]
  marketing boolean [default: false]
  preferences boolean [default: false]
  social_media boolean [default: false]
  
  // Gestion du consentement GDPR
  accepted_at timestamp [null]
  rejected_at timestamp [null]
  last_updated_at timestamp [null]
  migrated_at timestamp [null]
  preferences_details json [null]
  consent_version varchar(255) [default: '1.0']
  status enum('pending','accepted','rejected','partial') [default: 'pending']
  
  // Traçabilité navigation
  page_url varchar(255) [null]
  referer varchar(255) [null]
  browser_info json [null]
  
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  // Index pour optimisation
  indexes {
    (user_id, status) [name: 'idx_cookies_user_status']
    (session_id, ip_address) [name: 'idx_cookies_session_ip']
    (accepted_at) [name: 'idx_cookies_accepted']
    (status) [name: 'idx_cookies_status']
  }
  
  Note: 'Gestion complète des cookies et consentement GDPR'
}

Table messages {
  id bigint [pk, increment]
  sender_id bigint [ref: > users.id, null]
  recipient_id bigint [ref: > users.id, null]
  
  // Contenu du message
  subject varchar(255) [not null]
  body text [not null]
  message_type enum('info','warning','error','success','system') [default: 'info']
  priority enum('low','normal','high','urgent') [default: 'normal']
  
  // Statut et gestion
  is_read boolean [default: false]
  is_archived boolean [default: false]
  is_system_message boolean [default: false]
  auto_delete_at timestamp [null]
  
  // Métadonnées
  read_at timestamp [null]
  archived_at timestamp [null]
  deleted_at timestamp [null]
  parent_message_id bigint [ref: > messages.id, null]
  
  // Données supplémentaires
  attachments json [null]
  metadata json [null]
  ip_address varchar(45) [null]
  user_agent text [null]
  
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Système de messages entre utilisateurs avec gestion avancée'
}

// Relations détaillées
Ref: cookies.user_id > users.id [delete: cascade]
Ref: messages.sender_id > users.id [delete: set null]
Ref: messages.recipient_id > users.id [delete: set null]
Ref: messages.parent_message_id > messages.id [delete: set null]

// Notes sur le schéma
Note: '''
**Schéma Authentification Complète avec GDPR & Cookies**

**Tables Principales :**
- **users** : Gestion complète des utilisateurs avec profils détaillés
- **cookies** : Conformité GDPR avec gestion fine des consentements
- **password_reset_tokens** : Sécurisation des réinitialisations
- **messages** : Communication interne avec hiérarchie

**Fonctionnalités GDPR :**
- Consentement granulaire par type de cookie
- Traçabilité complète des choix utilisateur
- Versioning des consentements
- Support anonyme (session_id) et connecté (user_id)

**Sécurité :**
- Tracking IP et User-Agent pour sécurité
- Gestion des tokens de réinitialisation
- Historique des connexions
- Archivage et suppression automatique des messages

**Performance :**
- Index optimisés pour requêtes fréquentes
- Support des métadonnées JSON
- Gestion des fuseaux horaires
'''
